--- a/app/src/main/res/layout/activity_compare_numbers.xml
+++ b/app/src/main/res/layout/activity_compare_numbers.xml
@@ -1,6 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#593C8C"
@@ -38,6 +36,16 @@
         android:orientation="vertical"
         android:gravity="center"
         android:background="#E6E8E4">
+
+        <TextView
+            android:id="@+id/txtStreakCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Streak: 0"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:layout_marginBottom="20dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
