--- a/app/src/main/res/layout/activity_order_numbers.xml
+++ b/app/src/main/res/layout/activity_order_numbers.xml
@@ -151,6 +151,18 @@
                 android:importantForAccessibility="yes" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/txtStreak"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Streak: 0"
+            android:textSize="20sp"
+            android:textColor="#000000"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            android:importantForAccessibility="yes"/>
+
+
         <!-- Button to check the answer -->
         <Button
             android:id="@+id/btnSubmit"
